# QuantiPy

./: .flake8  .gitignore  README.md  StochasticRSIWithRSIAndMACD.html  backtest.json  blankly.json  cleanup.py  keys.json  notify.json  plot.py  plotter.py  pyproject.toml  run.py  settings.json  splits.json  symbols.json
.github/workflows/: ci.yaml
quantipy/: logger.py  position.py  state.py  trade.py  types.py
quantipy/strategies/: __init__.py  advanced.py  base.py  oversold.py  rsi.py  simple.py  split_protector.py  stoch_rsi_with_macd.py  stochastic.py
tests/: conftest.py  test_new.py  test_position_state_manager.py  test_trade.py  test_trade_manager.py
tests/strategies/: test_advanced.py  test_rsi.py  test_simple.py  test_simple_strategy.py  test_stochastic.py  test_trade.py
tests/utils/mock/: exchange.py
tools/: add_split.py  analysis.py  plotter.py
