[tool.poetry]
name = "quantipy"
version = "0.1.0"
description = "A crypto and securities trading bot with various strategies using Blankly as the backend"
authors = ["ngullotta <nikolaus.gullotta@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
blankly = "^1.18.25b0"
numpy = "1.26.1"
croniter = "^3.0.3"
yfinance = "^0.2.43"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pyflakes = "^3.2.0"
flake8 = "^7.1.1"
flake8-annotations = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3